2025-08-26T12:15:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17237802422 # 1184
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-26
* notice: last 14d: unq all: 5 19
* notice: prev accum: outdated-unq outdated-all / unq all: 1030 3056 / 1036 3076
* notice: next accum: outdated-unq outdated-all / unq all: 1031 3057 / 1036 3076
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-12] / []

2025-08-25T12:00:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17208182706 # 1182
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-25
* notice: last 14d: unq all: 6 20
* notice: prev accum: outdated-unq outdated-all / unq all: 1029 3055 / 1036 3076
* notice: next accum: outdated-unq outdated-all / unq all: 1030 3056 / 1036 3076
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-11] / []

2025-08-23T12:00:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17175180882 # 1178
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-23
* notice: last 14d: unq all: 7 21
* notice: prev accum: outdated-unq outdated-all / unq all: 1028 3054 / 1036 3076
* notice: next accum: outdated-unq outdated-all / unq all: 1029 3055 / 1036 3076
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-09] / []

2025-08-23T00:37:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17168921209 # 1177