@@ -1,12 +1,7 @@
 {
-  "count": 19,
-  "uniques": 5,
+  "count": 18,
+  "uniques": 4,
   "views": [
-    {
-      "timestamp": "2025-08-13T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-08-14T00:00:00Z",
       "count": 1,
