@@ -1,3 +1,12 @@
+2025-08-27T12:14:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17266365213 # 1186
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-27
+* notice: last 14d: unq all: 4 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 1031 3057 / 1036 3076
+* notice: next accum: outdated-unq outdated-all / unq all: 1032 3058 / 1036 3076
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-08-13] / []
+
 2025-08-26T12:15:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17237802422 # 1184
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-26
